--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <link rel="stylesheet" type="text/css" href="/css/header.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Afacad">
+
 </head>
 <body>
 
