--- a/src/main/resources/templates/pharmacyAccount.html
+++ b/src/main/resources/templates/pharmacyAccount.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Register</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Afacad">
+
     <style>
         #homeButton{
             font-size: 35px;
@@ -33,9 +35,9 @@
                         <div class="row justify-content-center">
                             <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
 
-                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up a pharmacy</p>
 
-                                <form method="post" th:action="@{/addPharmacyAccount/save}" class="mx-1 mx-md-4" th:object="${pharmacyUser}">
+                                <form method="post" th:action="@{/addPharmacyAccount/save}" class="mx-1 mx-md-4" th:object="${pharmacyUser}" enctype="multipart/form-data">
 
                                     <p class="alert alert-danger" role="alert" th:if="${param.fail}">There is already a user with this email!</p>
 
