--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -13,8 +13,8 @@
     <header>
         <nav>
             <div>
-                <div class="container">
-                    <a href="/" id="homeButton">MedManager</a>
+                <div class="container-header">
+                    <a href="/" id="homeButton-header">MedManager</a>
                     <ul>
                         <li sec:authorize="!isAuthenticated"><a href="/register">Account</a></li>
                         <li sec:authorize="isAuthenticated"><a href="/logout">Log Out</a></li>
