--- a/src/main/resources/templates/doctorsPagination.html
+++ b/src/main/resources/templates/doctorsPagination.html
@@ -35,6 +35,7 @@
       <p th:text="${doctorProfiles.content[index].birthday}"></p>
       <p th:text="${doctorProfiles.content[index].specialty}"></p>
       <p th:text="${doctorProfiles.content[index].nationality}"></p>
+      <p th:text="${doctorProfiles.content[index].hospitalProfile.name}"></p>
     </div>
     <div sec:authorize="hasRole('ROLE_ADMIN') or hasRole('ROLE_HOSPITAL')">
       <form th:action="@{/deleteDoctor}" th:method="post">
@@ -54,7 +55,7 @@
       <a th:if="${currentPage > 0}" th:href="@{/doctors(page=${currentPage - 1})}">Previous</a>
       <span th:if="${currentPage == 0}">Previous</span>
     </li>
-    <li th:class="${currentPage < totalPages - 1 ? 'pagination-button' : 'pagination-button disabled'}">hos
+    <li th:class="${currentPage < totalPages - 1 ? 'pagination-button' : 'pagination-button disabled'}">
       <a th:if="${currentPage < totalPages - 1}" th:href="@{/doctors(page=${currentPage + 1})}">Next</a>
       <span th:if="${currentPage == totalPages - 1}">Next</span>
     </li>
