--- a/src/main/resources/templates/profile_hospital.html
+++ b/src/main/resources/templates/profile_hospital.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Profil</title>
@@ -14,6 +14,12 @@
         #homeButton{
             text-decoration: none;
             color:black;
+        }
+        .custom-rounded {
+            border-radius: 20%; /* Ajustați procentajul pentru a obține aspectul dorit */
+            overflow: hidden; /* Asigurați-vă că imaginea este tăiată la forma pătrată */
+            width: 350px;
+            height: 200px;
         }
     </style>
 </head>
@@ -36,7 +42,24 @@
                 <div class="card mb-4">
                     <div class="card-body text-center">
                         <img th:src="'data:image/png;base64,' + ${profilePicture}" alt="avatar"
-                             class="rounded-circle img-fluid" style="width: 350px; height: 200px;">
+                             class="custom-rounded" >
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_HOSPITAL')">
+                        <form th:action="@{/schedule/save}" th:object="${form}" method="post" >
+                            <div class="containerSchedule">
+                                <div th:each="schedule, itemStat : *{schedules}"  class="schedule" style="margin-left:50px;">
+                                    <input th:field="*{schedules[__${itemStat.index}__].day}" th:value="${schedule.getDay()}" style="width: 100px;" placeholder="Day">
+                                    <input th:field="*{schedules[__${itemStat.index}__].startHour}" th:value="${schedule.getStartHour()}" style="width: 100px;" placeholder="Start HH:MM">
+                                    <input th:field="*{schedules[__${itemStat.index}__].endHour}" th:value="${schedule.getEndHour()}" style="width: 100px;" placeholder="End HH:MM">
+                                </div>
+                            </div>
+                            <div style="text-align: center; margin: 3px 0;">
+                                <button type="submit" class="btn btn-primary">Submit</button>
+                                <a th:href="@{/deleteSchedule}" onclick="return confirm('Are you sure?')" class="text-center">
+                                    <button type="button" class="btn btn-danger">Delete Schedule</button>
+                                </a>
+                            </div>
+                        </form>
                     </div>
                 </div>
 
