--- a/src/main/resources/templates/profile_pharmacy.html
+++ b/src/main/resources/templates/profile_pharmacy.html
@@ -96,7 +96,7 @@
                         </form>
                     </div>
                     <div sec:authorize="!hasRole('ROLE_PHARMACY')" class="containerSchedule">
-                        <div th:each="schedule : *{schedulesForNotPharmacy}" class="schedule" style="margin-left:50px;">
+                        <div th:each="schedule : *{form}" class="schedule" style="margin-left:50px;">
                             <p th:text="${schedule.getDay()}" ></p>
                             <p th:text="${schedule.getStartHour()}"></p>
                             <p th:text="${schedule.getEndHour()}"></p>
