--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="/css/appointment.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Afacad">
     <link rel="stylesheet" type="text/css" href="/css/header.css">
-    <script src="/js/appointment.js" defer></script>
 </head>
 <body>
 
@@ -45,5 +44,45 @@
             <button type="submit">Submit</button>
         </form>
     </div>
+
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.getElementById('dateInput').addEventListener('change', function() {
+            var selectedDate = this.value;
+            var currentDate = new Date().toISOString().split('T')[0];
+
+            if (selectedDate < currentDate) {
+                alert("You cannot select a date earlier than the current one!");
+                this.value = "";
+                return;
+            }
+
+            var formattedDate = new Date(selectedDate).toISOString().split('T')[0];
+
+            var doctorId = [[${appointment.doctorProfile.id}]];
+
+            fetch('/getAvailableHours?doctorId=' + doctorId + '&date=' + formattedDate)
+                .then(response => response.json())
+                .then(data => {
+                    var select = document.getElementById('selectOptions');
+                    select.innerHTML = '';
+
+                    var option = document.createElement('option');
+                    option.text = 'Select an hour';
+                    select.add(option);
+
+                    data.forEach(function(hour) {
+                        var option = document.createElement('option');
+                        option.value = hour;
+                        option.text = hour;
+                        option.setAttribute('th:field', '*{appointmentHour}');
+                        select.add(option);
+                    });
+                })
+                .catch(error => console.error('Error:', error));
+        });
+    });
+</script>
+
 </body>
 </html>
