--- a/src/main/resources/static/css/calendarDoctor.css
+++ b/src/main/resources/static/css/calendarDoctor.css
@@ -14,3 +14,8 @@ td button{
     background-color: #99d6ff;
     border: none;
 }
+
+#appointments{
+    display: flex;
+    justify-content: space-around;
+}
